--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div style="display: inline-block;">
               <button class="btn btn-primary mb-2" id="cambiar-modelo" style="background-color: blue;"disabled>Cambiar Modelo</button>
               <select class="btn btn-primary mb-2" id="modelo-seleccionado" style="background-color: blue;">
-                <option value="modelo1">VGG-16 </option>
+                <option value="modelo1">Modelo Propio</option>
                 <option value="modelo2">EfficientNetV2S</option>
                 <option value="modelo3">ResNet50</option>
                 <option value="modelo4">DenseNet121</option>
